# Cliproxy-Sentinel

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/cliproxyapi/: app.py  logging_setup.py  settings.py
src/cliproxyapi/cliproxy/: client.py
src/cliproxyapi/monitor/: account_rules.py  scheduler.py
src/cliproxyapi/registration/: internal_registration.py  registrar.py
tests/: test_account_rules.py  test_app.py  test_cliproxy_client.py  test_internal_registration_oauth.py  test_registrar.py  test_scheduler.py  test_settings.py
